# bbg-dlws-workbench

./: README.md  bbg-dlws-workbench-summary.md  pyproject.toml
examples/: config.bulk.yaml  config.inline.yaml  fields.sample.txt  ids.sample.csv
src/bbg_dlws_workbench/: cli.py  config.py
src/bbg_dlws_workbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bbg_dlws_workbench/identifiers/: chunker.py  csv_loader.py  fields_loader.py
src/bbg_dlws_workbench/soap/: builder.py  client.py  fields_criteria.py  fields_ops.py  poller.py  registry.py  submitter.py  transport.py
src/bbg_dlws_workbench/store/: __init__.py  base.py  filesystem.py
src/bbg_dlws_workbench/transform/: normalize.py
src/bbg_dlws_workbench/util/: logging.py
tests/: test_config.py  test_csv_loader.py
